--- a/client/src/styles/modules/_suggestion.scss
+++ b/client/src/styles/modules/_suggestion.scss
@@ -1,5 +1,5 @@
 .suggestion {
-  padding-left:68px;
+  padding-left:78px;
   &__item {
     color: #fff;
     font-size: rem(13);
